# crossmint-challenge

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/: phase1.py  phase2.py
src/clients/: http_reliable_client.py
src/models/: astral_object.py  cometh.py  polyanet.py  soloon.py
src/models/enums/: cometh_direction.py  soloon_color.py
src/services/: megaverse_service.py
tests/: test_phase1.py
