[tool.poetry]
name = "crossmint-challenge"
version = "0.1.0"
description = ""
authors = ["David Fang <david.fangta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tenacity = "^9.0.0"
pybreaker = "^1.2.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
